# libsc

./: .autotools  .cproject  .gitignore  .project  Makefile.am  NEWS  README  configure.ac  libsc.c  libsc.h  libsc.pc.in  libsc.sym
tests/: Makefile.am  array.c  base.c  common.h  group.c  string.c  tag.c
